Code cleanup: fix IDE warnings, add package-info.java files
Fixed IDE Warnings:
- OTAUpdateManager: Replaced deprecated URL(String) with URI.create().toURL()
- PPOAgent: Added logging for policyLoss and valueLoss
- DeepLearningProcessor: Removed unused TranslateException import
- SwarmLearner: Added getId() method, used id in logging

Added 17 package-info.java files:
- processor.ai, processor.learning, processor.multirobot, processor.slam
- network.security, network.ota, network.swarm, network.server
- robot.wheeled, robot.manipulator, robot.humanoid, robot.hardware
- actuator.motor, actuator.servo
- cli, editor, demo

Fixed FastSLAMProcessor:
- Implemented low-variance (systematic) resampling
- Added educational/demo documentation
- Fixed stub comments